--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,22 @@ services:
     volumes:
       - .:/app
     command: rails s -b 0.0.0.0
+    depends_on:
+      - db
+    links:
+      - db
+    environment:
+      DB_USER: root
+      DB_NAME: railsgram
+      DB_PASSWORD: password
+      DB_HOST: db
+  db:
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: railsgram
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "3307:3306"
